miniextendr-macros/tests/ui/impl_method_tag_deprecated_deny.stderr
error: use of deprecated constant `_::_MINIEXTENDR_IMPL_METHOD_TAG_WARN`: miniextendr: @param on impl block `MyType` has no effect — move it to the method. Tag: @param x nope
  --> tests/ui/impl_method_tag_deprecated_deny.rs:20:1
   |
20 | impl MyType {
   | ^^^^
   |
note: the lint level is defined here
  --> tests/ui/impl_method_tag_deprecated_deny.rs:11:9
   |
11 | #![deny(deprecated)]
   |         ^^^^^^^^^^
